--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "cleo",
   "scripts": {
     "dev": "node development.js",
-    "start": "node development.js",
+    "start": "node production.js",
     "test": "THINK_UNIT_TEST=1 nyc ava test/ && nyc report --reporter=html",
     "compile": "babel --no-babelrc src/ --presets think-node --out-dir app/",
     "lint": "eslint src/",
